  garbage collector, due to interaction with the "trashcan" code;
  access to the current frame during destruction of a local variable
  could access a pointer to freed memory.

Library

- The xml.sax.expatreader.ExpatParser class will no longer create
  circular references by using itself as the locator that gets passed
  to the content handler implementation.  [SF bug #535474]

C API

- PyType_Ready() accidentally did not inherit tp_is_gc; now it does.

Windows

- Fixed a bug in urllib's proxy handling in Windows.  [SF bug #503031]

- The installer now installs Start menu shortcuts under (the local
  equivalent of) "All Users" when doing an Admin install.


What's New in Python 2.2.1c2?
Release date: 26-Mar-2002
=============================

There were a bunch of mostly minor fixes between 2.2.1c1 and 2.2.1c2,
including:

- I remembered to run autoconf before cutting the release tarball.

Core and builtins

- The floating point behavior fix-up continued into complex_pow.

Library

- The email package bug #531966 was fixed.  This caused exceptions to
  occur when flattening multipart/* messages with zero or one (scalar)
  attachment.

- Support for https: urls in httplib was broken (by the sendall patch
  mentioned below).

- Minor bugs in the calendar module were fixed.

- A few minor bugs in pydoc were fixed (better url recognition, proper
  quoting of some elements).

- Some distutils commands didn't list all their "boolean options"
  which made overriding them from .cfg files not work.


What's New in Python 2.2.1c1?
Release date: 18-Mar-2002
=============================

This is primarily a bugfix release.  Many bugs have been fixed since
the release of 2.2 final.  Some of the more notable are listed here.

Core and builtins

- If you try to pickle an instance of a class that has __slots__ but
  doesn't define or override __getstate__, a TypeError is now raised.
  This is done by adding a bozo __getstate__ to the class that always